force-app/main/default/objects/Final_Acceptance__c/Final_Acceptance__c.object-meta.xml
<CustomObject>
    <description>Final Acceptance Certificate records linking handover packages to client sign-off. Gated on zero open Category-A punch items.</description>
    <label>Final Acceptance</label>
    <nameField>
        <displayFormat>FAC-{00000}</displayFormat>
        <label>FAC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Final Acceptances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>