force-app/main/default/objects/Final_Acceptance__c/fields/FAC_Status__c.field-meta.xml
<CustomField>
    <fullName>FAC_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Client Review</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>