force-app/main/default/objects/Final_Acceptance__c/fields/Handover_Package__c.field-meta.xml
<CustomField>
    <fullName>Handover_Package__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Handover Package</label>
    <referenceTo>Handover_Package__c</referenceTo>
    <relationshipLabel>Final Acceptances</relationshipLabel>
    <relationshipName>Final_Acceptances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>