force-app/main/default/objects/Final_Acceptance__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Final Acceptances</relationshipLabel>
    <relationshipName>Final_Acceptances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>